# Autonomous-driving

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: env.yaml  ppo.yaml  sac.yaml  sweep.yaml
dashboard/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  hyperparameter_guide.md  reproducing_results.md  reward_shaping.md
results/: summary.json
scripts/: make_dashboard.py  make_figures.py  make_report.py  record_demo.py  run_carla_server.sh  train_ppo.sh  train_sac.sh
src/ad_rl/: __init__.py
src/ad_rl/agents/: __init__.py  _common.py  ppo.py  sac.py
src/ad_rl/control/: __init__.py  controllers.py
src/ad_rl/envs/: __init__.py  carla_env.py  fallback_env.py  sensors.py  wrappers.py
src/ad_rl/evaluation/: __init__.py  evaluate.py  metrics.py
src/ad_rl/perception/: __init__.py  cnn_extractor.py  preprocessing.py
src/ad_rl/rewards/: __init__.py  reward.py
src/ad_rl/training/: __init__.py  callbacks.py  train.py  utils.py
src/ad_rl/utils/: __init__.py  config.py  logging.py  seeding.py
tests/: conftest.py  helpers.py  test_config.py  test_controllers.py  test_evaluation.py  test_fallback_env.py  test_metrics.py  test_perception.py  test_reward.py  test_smoke_training.py  test_wrappers.py
