[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-rl"
version = "0.1.0"
description = "Autonomous driving with deep reinforcement learning (PPO & SAC) in the CARLA simulator, with a fast simulator-free fallback environment, perception, control baselines, evaluation, and full CI/CD."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mani Chandan Mathi" }]
keywords = [
    "reinforcement-learning",
    "autonomous-driving",
    "carla",
    "ppo",
    "sac",
    "self-driving",
    "robotics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.4.0",
    "torch>=2.3",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
carla = ["carla>=0.9.15"]
viz = ["matplotlib>=3.7", "pandas>=2.0", "reportlab>=4.0", "pillow>=10.0", "imageio>=2.31", "imageio-ffmpeg>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/aimee-wagner/autonomous-driving-rl"
Repository = "https://github.com/aimee-wagner/autonomous-driving-rl"

[project.scripts]
ad-train = "ad_rl.training.train:main"
ad-eval = "ad_rl.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ad_rl = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["ad_rl"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "carla: tests that require a running CARLA server (skipped in CI)",
    "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["ad_rl"]
omit = ["*/carla_env.py", "*/sensors.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
