[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-rl"
version = "0.2.0"
description = "Autonomous driving with deep reinforcement learning (PPO & SAC) in the CARLA simulator. Includes a CPU-only fallback environment, CNN-based perception, classical controller baselines, full evaluation harness, and CI/CD pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mani Chandan Mathi", email = "108810456+mathi0405@users.noreply.github.com" }]
keywords = [
    "reinforcement-learning",
    "autonomous-driving",
    "carla",
    "ppo",
    "sac",
    "self-driving",
    "robotics",
    "deep-learning",
    "simulation",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.4.0",
    "torch>=2.3",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
carla = ["carla>=0.9.15"]
viz = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "reportlab>=4.0",
    "pillow>=10.0",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/mathi0405/Autonomous-driving"
Repository = "https://github.com/mathi0405/Autonomous-driving"
"Bug Tracker" = "https://github.com/mathi0405/Autonomous-driving/issues"
Changelog = "https://github.com/mathi0405/Autonomous-driving/blob/main/CHANGELOG.md"

[project.scripts]
ad-train = "ad_rl.training.train:main"
ad-eval = "ad_rl.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ad_rl = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF", "D"]
ignore = [
    "B008",     # function call in default argument
    "RUF012",   # mutable class variable annotation
    "D100",     # missing docstring in public module (handled at file level)
    "D104",     # missing docstring in public package
    "D203",     # one-blank-line-before-class (conflicts with D211)
    "D213",     # multi-line summary second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "SIM", "RUF100"]
"scripts/**/*.py" = ["D", "S101", "RUF001", "RUF002", "RUF003", "E501", "RUF100"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["ad_rl"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_defs = false
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "carla: tests that require a running CARLA server (skipped in CI)",
    "slow: long-running integration tests (> 30 s)",
]

[tool.coverage.run]
branch = true
source = ["ad_rl"]
omit = ["*/carla_env.py", "*/sensors.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
